# job_board

./: .gitignore
conf/: default.env
src/: pyproject.toml  pytest.ini
src/account/: apps.py  forms.py  urls.py  views.py
src/account/migrations/: 0001_initial.py
src/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
src/board/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
src/board/migrations/: 0001_initial.py  0002_alter_specialization_options_and_more.py  0003_company_user_alter_application_letter_and_more.py
src/job_board/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: base.html
src/templates/account/: auth.html  create_user.html
src/templates/board/: companies.html  company.html  company_create.html  create_vacancy.html  index.html  my_company.html  vacancies.html  vacancy.html
src/templates/includes/: header.html
src/tests/: test_company.py
src/tests/unit/api/: conftest.py  test_views.py
